[project]
name = "astrohack"
version = "0.2.0"
description = "Holography Antenna Commissioning Kit"
authors = [
    {name = "Jan-Willem Steeb", email="jsteeb@nrao.edu"},
    {name = "Joshua Hoskins", email="jhoskins@nrao.edu"}, 
    {name = "Victor de Souza Magalhaes", email="vdesouza@nrao.edu"}
]
license = {file = "LICENSE.txt"}
readme = "README.md"
requires-python = ">= 3.8, < 3.12"

dependencies = [
'astropy',
'dask',
'distributed',
'gdown',
'matplotlib',
'memory_profiler',
'numba>=0.57.0',
'numpy',
'prettytable',
'pytest',
'pytest-cov',
'pytest-html',
'scikit_image',
'scipy',
'xarray',
'zarr',
'bokeh',
'jupyterlab',
'python_casacore>=3.5.2; sys_platform != "darwin" '
]


[project.optional-dependencies]
docs = [
    'ipykernel',
    'ipympl',
    'ipython',
    'jupyter-client',
    'nbsphinx',
    'recommonmark',
    'scanpydoc',
    'sphinx-autoapi',
    'sphinx-autosummary-accessors',
    'sphinx_rtd_theme',
    'twine',
    'pandoc'
]
