[project]
name = "astrohack"
version = "0.7.0"
description = "Holography Antenna Commissioning Kit"
readme = "README.md"
requires-python = ">= 3.11, < 3.14"
dependencies = [ "astropy", "dask", "distributed", "dropbox", "toolviper", "ipywidgets", "matplotlib", "numba>=0.57.0", "numpy", "prettytable", "pycryptodome", "pytest", "pytest-cov", "pytest-html", "scikit_image", "scikit-learn", "scipy", "rich", "xarray", "zarr<3.0.0", "bokeh", "jupyterlab", "python_casacore>=3.6.1; sys_platform != \"darwin\" ",]
[[project.authors]]
name = "Joshua Hoskins"
email = "jhoskins@nrao.edu"

[[project.authors]]
name = "Victor de Souza Magalhaes"
email = "vdesouza@nrao.edu"

[[project.authors]]
name = "Jan-Willem Steeb"
email = "jsteeb@nrao.edu"

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]
docs = [ "ipykernel", "ipympl", "ipython", "jupyter-client", "nbsphinx", "recommonmark", "scanpydoc", "sphinx-autoapi", "sphinx-autosummary-accessors", "sphinx_rtd_theme", "twine", "pandoc",]
